# jupyterlite-pdf-exporter

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .prettierignore  CONTRIBUTING.md  README.md  install.json  jupyter-lite.json  package.json  pyproject.toml
.github/workflows/: build.yml  check-release.yml  prep-release.yml  publish-release.yml  release.yml  update-integration-tests.yml
extensions/jupyterlite-pdf-exporter/: package.json
extensions/jupyterlite-pdf-exporter/static/: 239.8a61a08f7aed41b12dd0.js  434.5cab3a3f6a770a4eba20.js  728.43a8b8756c2e3d3c907d.js  751.d5f3282a9265c13ad719.js  remoteEntry.1e487012e13aef5927fd.js  style.js  third-party-licenses.json
jupyterlite_pdf_exporter/: __init__.py
lite/: requirements.txt
notebooks/: altair.ipynb  folium.ipynb  ipycanvas.ipynb  renderers.ipynb
schema/: plugin.json
src/: index.ts  pdf.ts  status.ts
src/__tests__/: jupyterlite_pdf_exporter.spec.ts
ui-tests/: package.json
ui-tests/tests/: jupyterlite_pdf_exporter.spec.ts
